--- a/docs/操作系统/常用软件.md
+++ b/docs/操作系统/常用软件.md
@@ -116,6 +116,7 @@
 | [starship] | 命令提示符, 跨 Shell, 跨平台, 开源. :crab:             | `starship` (pacman/cargo) |
 
 [wezterm]: https://github.com/wez/wezterm
+[eza]: https://github.com/eza-community/eza
 [zoxide]: https://github.com/ajeetdsouza/zoxide
 [bat]: https://github.com/sharkdp/bat
 [btop]: https://github.com/aristocratos/btop
@@ -145,14 +146,16 @@
 
 ### 字体
 
-| 名称             | 描述                | 包名                   |
-| ---------------- | ------------------- | ---------------------- |
-| [Cascadia Code]  | 连体字, 等宽, 开源. |                        |
-| [Nerd Font]      | 字元图标.           |                        |
-| Cascadia Code NF |                     | ttf-cascadia-code-nerd |
+| 名称                          | 描述                          | 包名                   |
+| ----------------------------- | ----------------------------- | ---------------------- |
+| [Cascadia Code]               | 连体字, 等宽, 开源.           |                        |
+| [Nerd Font]                   | 字元图标.                     |                        |
+| Cascadia Code NF              | 带 Nerd Font 的 Cascadia Code | ttf-cascadia-code-nerd |
+| [Source Han Serif (思源宋体)] | 开源, 免费, 粗体.             |                        |
 
 [cascadia code]: https://github.com/microsoft/cascadia-code
 [nerd font]: https://www.nerdfonts.com/
+[Source Han Serif (思源宋体)]: https://source.typekit.com/source-han-serif/
 
 ---
 
