--- a/docs/计算理论/确定有限自动机.md
+++ b/docs/计算理论/确定有限自动机.md
@@ -5,7 +5,7 @@
 **关键字**: 确定有限状态自动机 (DFSA), 确定有限状态机 (DFSM).
 
 
-计算机十分复杂, 在对其进行计算相关的研究时会采用一种简化的抽象模型, 即*自动机*. \
+计算机十分复杂, 在对其进行计算相关的研究时会采用一种简化的抽象模型, 即*自动机*.  
 这种简化是通过剔除计算机中与计算无关的特征来实现的, 最终得到一个用于描述计算机软硬件的计算模型(computational model).
 
 确定有限自动机 (以下简称 DFA) 是一种自动机. 其中, "确定" 和 "有限" 是对该自动机的限制, 其含义如下:
